# opencv-mobile-shared

./: opencv2_cmake_options.txt  opencv3_cmake_options.txt  opencv4_cmake_options.txt
patches/: opencv-4.9.0-add-pkgconfig.patch  opencv-4.9.0-extra-removal.patch
test/: CMakeLists.txt  main.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake
